# gallop

./: .gitignore  README.md
bootstrap/: CMakeLists.txt
bootstrap/cmake/: ConfigCLang.cmake  ConfigGoogleTest.cmake
bootstrap/cmake/clang/: FindClangCxx.cmake
bootstrap/cmake/llvm/: FindLLVM.cmake  FindLlvmRanlib.cmake
bootstrap/googletest/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
bootstrap/include/: gallop.hpp
bootstrap/include/charset/detector/: detector.hpp
bootstrap/include/charset/encoding_charset/: encoding_charset.hpp
bootstrap/include/charset/translate/: utf16.hpp  utf32.hpp  utf7.hpp
bootstrap/include/cli/: compiler_from_file.hpp  compiler_from_stdin.hpp  interpreter.hpp  translate_args.hpp
bootstrap/include/compiler/common/: location.hpp
bootstrap/include/compiler/lexer/: lexical_analyzer.hpp  token.hpp  token_type.hpp
bootstrap/include/compiler/llvm/: code_gen.hpp  ir_gen_context.hpp  llvm_gen.hpp  option.hpp
bootstrap/include/compiler/parser/: ast.hpp  ast_node_type.hpp  option.hpp  printable_ast.hpp  syntax_analyzer.hpp
bootstrap/include/compiler/parser/ast_node/: block_fmain.hpp  comment_out.hpp  commentout.hpp  module.hpp  module_file.hpp  module_interpreter.hpp  module_stdin.hpp  root.hpp
bootstrap/include/file/: file.hpp
bootstrap/include/main/: main.hpp
bootstrap/include/util/hexstringer/: hexstringer.hpp
bootstrap/src/: gallop.cpp
bootstrap/src/lib/charset/detector/: detector.cpp
bootstrap/src/lib/charset/encoding_charset/: encoding_charset.cpp
bootstrap/src/lib/charset/translate/: utf16.cpp  utf32.cpp  utf7.cpp
bootstrap/src/lib/cli/: compiler_from_file.cpp  compiler_from_stdin.cpp  interpreter.cpp  translate_args.cpp
bootstrap/src/lib/compiler/common/: location.cpp
bootstrap/src/lib/compiler/lexer/: lexical_analyzer.cpp  token.cpp  token_type.cpp
bootstrap/src/lib/compiler/llvm/: code_gen.cpp  ir_gen_context.cpp  llvm_gen.cpp  option.cpp
bootstrap/src/lib/compiler/parser/: ast.cpp  ast_node_type.cpp  option.cpp  printable_ast.cpp  syntax_analyzer.cpp
bootstrap/src/lib/file/: file.cpp
bootstrap/src/lib/main/: main.cpp
bootstrap/src/lib/util/hexstringer/: hexstringer.cpp
bootstrap/test/lib/cli/: translate_args_test.cpp
(+71 files in other folders)
